# peregrine-constellation

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  doxygen.config  test.sh
.github/workflows/: build.yml  cmake-build-test.yml  cmake-single-platform.yml  ctest.yml  generate-changelog.yml
Core/: CMakeLists.txt  peregrine-constellation.h
Core/Inc/: modem.h  orchestrator.h  packet.h
Core/Inc/bsp/: adc_bsp.h  dac_bsp.h  ptt_bsp.h  time_bsp.h
Core/Inc/decoding/: byte_assembler.h  decoder.h  fsk_decoder.h  packet_decoder.h
Core/Inc/dsp/: filters.h
Core/Inc/encoding/: bit_stuffer.h  cobs_encoder.h  encoder.h  packet_serializer.h
Core/Inc/interface/: pconfig.h  peregrine-constellation.h
Core/Inc/utils/: bit_unpacker.h  circular_buffer.h  fsk_utils.h  goertzel.h  time_utils.h
Core/Src/: modem.c  orchestrator.c  packet.c  peregrine-constellation.c
Core/Src/decoding/: byte_assembler.c  cobs_decoder.c  decoder.c  fsk_decoder.c  packet_decoder.c
Core/Src/dsp/: filters.c
Core/Src/encoding/: cobs_encoder.c  encoder.c  packet_serializer.c
Core/Src/utils/: circular_buffer.c  fsk_utils.c  goertzel.c  time_utils.c
examples/: CMakeLists.txt
examples/basic-example/: CMakeLists.txt  basic-example.c
examples/basic-example/bsp/: adc_bsp.c  dac_bsp.c  ptt_bsp.c  time_bsp.c
examples/decoder-example/: CMakeLists.txt  decoder-example.c
examples/encoder-example/: CMakeLists.txt  encoder-example.c
examples/simple-example/: CMakeLists.txt  simple-example.c
include/: packet.h  pconfig.h
lib/: CMakeLists.txt
peregrine-constellation/: CMakeLists.txt  peregrine-constellation.h
peregrine-constellation/include/: peregrine-constellation.h
peregrine-constellation/include/decoding/: byte_assembler.h  cobs_decoder.h  decoder.h  fsk_decoder.h
peregrine-constellation/include/encoding/: cobs_encoder.h  encoder.h
peregrine-constellation/include/utils/: bit_unpacker.h  circular_buffer.h  fsk_decoder.h  fsk_utils.h  goertzel.h
peregrine-constellation/src/: packet.c  peregrine-constellation.c
peregrine-constellation/src/decoding/: byte_assembler.c  cobs_decoder.c  decoder.c  fsk_decoder.c  packet_decoder.c
peregrine-constellation/src/encoding/: cobs_encoder.c  encoder.c
peregrine-constellation/src/utils/: circular_buffer.c  fsk_decoder.c  fsk_utils.c  goertzel.c
src/: peregrine-constellation.c
tests/: CMakeLists.txt  test_packet_attributes.c  test_packet_checksum.c  test_packet_initialization.c
tests/decoding/: CMakeLists.txt  test_byte_assembler.c
tests/decoding/byte_assembler/: CMakeLists.txt
tests/decoding/fsk/: CMakeLists.txt  test_fsk_decoder.c
tests/decoding/packet_assembler/: CMakeLists.txt  test_packet_assembler.c
tests/mocks/: mock_decoder.c
tests/samples/: baud32.h  samples.h
